--- a/training/06_editing_sysmeta.Rmd
+++ b/training/06_editing_sysmeta.Rmd
@@ -14,4 +14,4 @@ Sometimes the system doesn't recognize the file types properly. For example you 
 
 * Read the system metadata in from the data file you uploaded [previously](#exercise-4).
 * Check to make sure the `fileName` and `formatId` are set correctly (the extension in `fileName` should match the `formatId`).
-* Update the system metadata if necessary.
+* Update the system metadata if necessary. CSVs have the formatId "text/csv".
