--- a/workflows/edit_data_packages/01_datapack_background.Rmd
+++ b/workflows/edit_data_packages/01_datapack_background.Rmd
@@ -39,10 +39,17 @@ dp <- dataone::getDataPackage(d1c, "resource_map_urn:uuid:1f9eee7e-2d03-43c4-ad7
 ```
 
 ### Data Objects
+
+You can see what slots are in an S4 object after typing the subsetting operator `@`, or pressing TAB with the cursor after an existing `@`. Try viewing the slots of the data package.
+```{r, eval=F}
+dp@
+```
+
 Check out the `objects` slot
 ```{r, eval=F}
 dp@objects
 ```
+The `objects` slot contains a list of object PIDs that are accessed using the `$` subsetting operator. Both are found within the structure of data packages in R. 
 
 Get the number for data and metadata files associated with this data package:
 ```{r, eval=F}
@@ -63,7 +70,7 @@ metadataId <- selectMember(dp, name="sysmeta@ADD THE NAME OF THE SLOT", value="P
 
 **Example:**
 ```{r, eval = F}
-selectMember(dp, name="sysmeta@formatId", value="image/tiff")
+selectMember(dp, name="sysmeta@formatId", value="image/tiff") 
 selectMember(dp, name="sysmeta@fileName", value="filename.csv")
 ```
 
