--- a/workflows/edit_eml/edit_semantic_annotation.Rmd
+++ b/workflows/edit_eml/edit_semantic_annotation.Rmd
@@ -3,7 +3,7 @@
 For a brief overview of what a semantic annotation is, and why we use them check out [this video.](https://drive.google.com/file/d/1Err-fL8O21kd1NzHJ9HJkK_B2fpt4sQW/view?usp=sharing)
 
 Even more information on how to add semantic annotations to EML 2.2.0 can be found
- <a href = 'https://eml.ecoinformatics.org/semantic-annotation-primer.html'>here</a>. Currently metacatUI does not support the editing of semantic annotations on the website so all changes will have to be done in R.
+ <a href = 'https://eml.ecoinformatics.org/semantic-annotation-primer.html'>here</a>.
  
 There are several elements in the EML 2.2.0 schema that can be annotated:
 
@@ -11,7 +11,7 @@ There are several elements in the EML 2.2.0 schema that can be annotated:
 * entity (eg: `otherEntity` or `dataTable`)
 * `attribute`
 
-On the datateam, we will only be adding annotations to attributes for now.
+Attribute annotations can be edited in R and also on the website. Dataset and entity annotations are only done in R.
 
 ### How annotations are used
 
@@ -22,10 +22,20 @@ On the website you can see annotations in each of the attributes.
 
 You can click on any one of them to search for more datasets with that same annotation.
 ![](../images/annotations_web_use.png)
+```{block, type = "note"}
+Semantic attribute annotations can be applied to spatialRasters, spatialVectors and dataTables
+```
 
-#### Attribute-level annotations
 
-To add annotations to the `attributeList` you will need information about the `propertyURI` and `valueURI`
+#### Attribute-level annotations on the website editor
+
+The website has a searchable list of attribute annotations that are grouped by category and specificity. Open your dataset on the test website from earlier and enter the attribute editor. Look through all of the available annotations.
+
+Adding attribute annotations using the website is the easiest way, however adding them using R and/or the Shiny app may be quicker with very larger datasets. 
+
+#### Attribute-level annotations in R
+
+To manually add annotations to the `attributeList` in R you will need information about the `propertyURI` and `valueURI`.
 
 Annotations are essentially composed of a sentence, which contains a subject (the attribute), predicate (`propertyURI`),
 and object (`valueURI`). Because of the way our search interface is built, for now we will be using attribute annotations that have a `propertyURI` label of "contains measurements of type". 
@@ -55,9 +65,6 @@ $valueURI$valueURI
 [1] "http://purl.dataone.org/odo/ECSO_00002617"
 ```
 
-```{block, type = "note"}
-Semantic attribute annotations can be applied to spatialRasters, spatialVectors and dataTables
-```
 
 ### How to add an annotation
 
@@ -80,12 +87,12 @@ There are several ontologies to search in. In order of most to least likely to b
 * [Information Artifact Ontology (IAO)](http://bioportal.bioontology.org/ontologies/IAO/?p=summary)
     - this ontology contains terms related to information entities (eg: journals, articles, datasets, identifiers)
 
-To search, navigate through the "classes" until you find an appropriate term. When we are picking terms, it is important that we not just pick a similar term or a term that seems close -  we want a term that is totally "right". For example, if you have an attribute for carbon tetroxide flux and an ontology with a class hierarchy like this:
+To search, navigate through the "classes" until you find an appropriate term. When we are picking terms, it is important that we not just pick a similar term or a term that seems close -  we want a term that is 100% accurate. For example, if you have an attribute for carbon tetroxide flux and an ontology with a class hierarchy like this:
 
 -- carbon flux  
   |---- carbon dioxide flux
 
-Our exact attribute, carbon tetroxide flux is not listed. In this case, we should pick "carbon flux" as it's completely correct and not "carbon dioxide flux" because it's more specific but not quite right.
+Our exact attribute, carbon tetroxide flux, is not listed. In this case, we should pick "carbon flux" as it's completely correct/accurate and not "carbon dioxide flux" because it's more specific/precise but not quite right.
 
 ```{block, type = "note"}
 For general attributes (such as ones named depth or length), it is important to be as specific as possible about what is being measured. 
@@ -140,11 +147,15 @@ doc$dataset$dataTable[[3]]$attributeList$attribute[[6]]$annotation$valueURI <- l
 
 On the far right of the table of `shiny_attributes` there are 4 columns: `id`, `propertyURI`, `propertyLabel`, `valueURI`, `valueLabel` that can be filled out.
 
-### Annotating sensitive data
+### Dataset Annotations
+
+Dataset annotations can only be made using R. There are several helper functions that assist with making dataset annotations.
+
+#### Data Sensitivity
 
 Sensitive datasets that might cover protected characteristics (human subjects data, endangered species locations, etc) should be annotated using the data sensitivity ontology: https://bioportal.bioontology.org/ontologies/SENSO/?p=classes&conceptid=root. 
 
-#### Dataset Annotations
+#### Dataset Discipline
 
 As a final step in the data processing pipeline, we will categorize the dataset. We are trying to categorize datasets so we can have a general idea of what kinds of data we have at the Arctic Data Center.
 
@@ -153,5 +164,10 @@ Datasets will be categorized using the [Academic Ontology](https://bioportal.bio
 Be sure to ask your peers in the #datateam slack channel whether they agree with the themes you think best fit your dataset. Once there is consensus, use the following line of code: 
 
 ```{r, eval = F}
-doc <- datamgmt::eml_categorize_dataset(doc, c("list", "of", "themes"))
+doc <- arcticdatautils::eml_categorize_dataset(doc, c("Soil Science", "Plant Science", "Ecology"))
+```
+
+Be careful not to duplicate dataset annotations. The above code does not existing prior dataset annotations. Duplicate annotations can be removed by setting them to `NULL`.
+```{r, eval = F}
+doc$dataset$annotation[[i]] <- NULL
 ```
